<resources>
    <string name="app_name">AndroidOdev</string>
    <string name="mobil_programlama">Mobil Programlama</string>
    <string name="odevi">Ödevi</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="login">LOGIN</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
</resources>
